--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
 
             <p align="center"> 
                 <span class="nav">
-                <a href="#wedding" class="green"><i class="icon-heart"></i></a> &nbsp; &bull; &nbsp;
-                <a href="#reception" class="brown"><i class="icon-beer"></i></a> <a href="#reception" class="red"><i class="icon-glass"></i></a> &nbsp; &bull; &nbsp; 
-                <a href="#accommodations"><span class="orange"><i class="icon-home"></i></span></a> &nbsp; &bull; &nbsp; 
-                <a href="#registry"><span class="blue"><i class="icon-gift"></i></span></a> &nbsp; &bull; &nbsp; 
-                <a href="#contact"><span class="purple"><i class="icon-envelope-alt"></i></span></a></span>
+                <a href="#wedding" class="green"><i class="icon-heart"></i> wedding</a> &nbsp; &bull; &nbsp;
+                <a href="#reception" class="brown"><i class="icon-beer"></i></a> <a href="#reception" class="red"><i class="icon-glass"></i> reception</a> &nbsp; &bull; &nbsp; 
+                <a href="#accommodations"><span class="orange"><i class="icon-home"></i></span> accommodations</a> &nbsp; &bull; &nbsp; 
+                <a href="#registry"><span class="blue"><i class="icon-gift"></i></span> registry</a> &nbsp; &bull; &nbsp; 
+                <a href="#contact"><span class="purple"><i class="icon-envelope-alt"></i> contact</span></a></span></br></br>
+
+                <span class="tiny">click the little icons above for more information.</br>if you don't see the tiny icons, that means you're not using chrome.</br>they're really cute, you should use chrome.</span>
             </p>
 
             <p> &nbsp; </p>
             <p class="rsvp">
-                <i class="icon-edit"></i> we're not ready for you to rsvp yet, but will be soon! </br>
-                <span class="tiny">click the little icons above for more information</span></br>
+                <a href="https://docs.google.com/forms/d/1SpwavBylbNXDnsN93uvjyDYkcnb2PIiLIy30irBnjpo/viewform"><i class="icon-edit"></i> <span class="bold">rsvp</span></a></br></br>
             </p>
 
             <p align="center">
